# image_processor

./: CMakeLists.txt  command_parser.cpp  command_parser.h  image.cpp  image.h  image_processor.cpp  readme.md
file_utilities/: file_working_utilities.cpp  file_working_utilities.h
filters/: all_filters.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  matrix_filter.cpp  matrix_filter.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h  single_pixel_filter.cpp  single_pixel_filter.h
reader/: reader.cpp  reader.h
writer/: writer.cpp  writer.h
